--- a/clickygame/src/App.css
+++ b/clickygame/src/App.css
@@ -24,10 +24,31 @@
   box-shadow: 0 14px 28px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.22);
 }
 
+.title{
+  color: white;
+  text-decoration: none;
+  transition: .2s;
+  transition-timing-function: ease-in-out;
+}
+
+.title:hover{
+  transition: .2s;
+  transition-timing-function: ease-in-out;
+  transform: scale(1.02);
+}
+
 .second{
   font-weight: 450;
   font-size: 27px;
   margin-top: 24px;
+}
+
+.correct{
+  color: green;
+}
+
+.incorrect{
+  color: red;
 }
 
 .body{
